# hil-serl-so101

./: .gitignore  DATASETS.md  README.md  env_config_so101.json  pyproject.toml  run_find_joint_limits.sh  run_record_demos.sh  test_so101_movement.py  train_config_so101.json
configs/: deploy.yaml  grasp_only_hilserl_eval_config.json  grasp_only_hilserl_train_config.json  grasp_only_record_angled_10ep_config.json  grasp_only_record_v3_lamp_negative_5ep_config.json  grasp_only_record_v3_lamp_negative_config.json  grasp_only_record_v3_lamp_positive_5ep_config.json  reach_grasp_hilserl_train_config.json  reach_grasp_rl_env_config.json  reward_classifier_grasponly_train_config.json  reward_classifier_grasponly_v4_train_config.json  reward_classifier_grasponly_v5_lamp_train_config.json  reward_classifier_grasponly_v5_train_config.json  reward_classifier_record_15ep_config.json  reward_classifier_record_5ep_config.json  reward_classifier_record_config.json  reward_classifier_train_config.json
devlogs/: 001_so101-gripper-control.md  002_so101-hil-serl-compatibility-fixes.md  003_so101-hilserl-project-overview.md  004_so101-action-control-debugging.md  005_camera-setup-tutorial-prep.md  006_training-summary.md  007_claude-code-history-backup.md  008_red_cube_bowl_training.md  010_rl_deploy_scaffold.md  012_camera_calibration.md  013_sim_to_real_inference.md
docs/: CALIBRATION.md  RED_CUBE_BOWL_TRAINING.md  SIM2REAL.md
scripts/: adjust_wrist_angles.py  bc_pretrain_sac.py  capture_gripper_states.py  create_grasponly_offline_dataset.py  create_grasponly_reward_dataset.py  depth_estimation.py  eval_reward_classifier.py  extract_frames_for_labeling.py  extract_split_images.py  generate_episodes_stats.py  hilserl_inference.py  ik_grasp_demo.py  ik_reset_position.py  merge_datasets.py  ppo_inference.py  record_camera.py  (+11 more)
(+24 files in other folders)
